--- a/teste_hipoteses.ipynb
+++ b/teste_hipoteses.ipynb
@@ -228,6 +228,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9939a59",
+   "metadata": {},
+   "source": [
+    "Buscando reduzir custos e melhorar a qualidade de vida de seus colaboradores, uma empresa de atendimento decidiu fazer um teste para avaliar se a adoção do home office para os operadores produziria algum efeito negativo na qualidade dos atendimentos.\n",
+    "\n",
+    "Para o teste foram selecionados aleatoriamente 30 operadores que tiveram as médias das notas de avaliação (0 a 10) dos clientes registradas nos 2 locais de trabalho.\n",
+    "\n",
+    "Com os dados obtidos, como podemos responder a pergunta: \"Operadores trabalhando em home office possuem pior avaliação?\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "595e7ed3",
+   "metadata": {},
+   "source": [
+    "Para responder a pergunta precisamos saber se a média das notas dos clientes para os operadores trabalhando no escritório é estatisticamente maior do que a média das notas dos clientes para os mesmos operadores trabalhando em home office.\n",
+    "\n",
+    "Relembrando, a Hipótese Nula sempre apresentará uma igualdade e a Hipótese Alternativa uma desigualdade. Portanto definimos as seguintes hipóteses nula e alternativa:\n",
+    "- H0: As notas no Escritório são iguais as notas em Home Office, ou: NE = NHO\n",
+    "- H1: As notas no Escritório são maiores que as notas em Home Office, ou: NE > NHO"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "9c094aa5",
@@ -340,6 +364,20 @@
     "else:\n",
     "    print(\"Não rejeitamos H₀ → Não há evidência suficiente para afirmar que a média do Escritório é maior.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4b8ef53",
+   "metadata": {},
+   "source": [
+    "Já sabemos que p-valor indica o quão plausível é H0, e neste caso, o valor calculado de 12% indica que H0 é plausível."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ebbc397",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
