--- a/notebooks/teste_hipoteses.ipynb
+++ b/notebooks/teste_hipoteses.ipynb
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9939a59",
+   "id": "a9c22049",
    "metadata": {},
    "source": [
     "Buscando reduzir custos e melhorar a qualidade de vida de seus colaboradores, uma empresa de atendimento decidiu fazer um teste para avaliar se a adoção do home office para os operadores produziria algum efeito negativo na qualidade dos atendimentos.\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "595e7ed3",
+   "id": "d1e2a462",
    "metadata": {},
    "source": [
     "Para responder a pergunta precisamos saber se a média das notas dos clientes para os operadores trabalhando no escritório é estatisticamente maior do que a média das notas dos clientes para os mesmos operadores trabalhando em home office.\n",
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4b8ef53",
+   "id": "8224b8a0",
    "metadata": {},
    "source": [
     "Já sabemos que p-valor indica o quão plausível é H0, e neste caso, o valor calculado de 12% indica que H0 é plausível."
@@ -375,9 +375,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ebbc397",
+   "id": "e978c4d7",
    "metadata": {},
-   "source": []
+   "source": [
+    "Como o p-valor de 12% é maior que o nível de significância de 5%, podemos concluir que não existem evidências estatísticas suficientes contra H0 , ou seja, não rejeitamos H0.\n",
+    "\n",
+    "Relembrando as hipóteses definidas:\n",
+    "- H0: As notas no Escritório são iguais as notas em Home Office, ou: NE = NHO\n",
+    "- H1: As notas no Escritório são maiores que as notas em Home Office, ou: NE > NHO\n",
+    "\n",
+    "E como não rejeitamos H0 , podemos dizer que não existem evidências estatísticas de que a média das notas dos operadores no Escritório não seja igual a média das notas dos mesmos operadores em Home Office."
+   ]
   }
  ],
  "metadata": {
