--- a/teste_hipoteses.ipynb
+++ b/teste_hipoteses.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e1b8fb22",
+   "metadata": {},
+   "source": [
+    "# Importação das Bibliotecas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "3f298f77",
@@ -13,6 +21,14 @@
     "import matplotlib.pyplot as plt\n",
     "from composicao_histograma_boxplot import composicao_histograma_boxplot\n",
     "from composicao_histograma_boxplot import calcular_estatisticas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a402614f",
+   "metadata": {},
+   "source": [
+    "# Leitura e Análise da Base"
    ]
   },
   {
