--- a/notebooks/teste_hipoteses.ipynb
+++ b/notebooks/teste_hipoteses.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9914736c",
+   "metadata": {},
+   "source": [
+    "# Importação das Bibliotecas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "3f298f77",
@@ -13,6 +21,14 @@
     "import matplotlib.pyplot as plt\n",
     "from composicao_histograma_boxplot import composicao_histograma_boxplot\n",
     "from composicao_histograma_boxplot import calcular_estatisticas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32ae79ea",
+   "metadata": {},
+   "source": [
+    "# Leitura e Análise da Base"
    ]
   },
   {
@@ -229,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9c22049",
+   "id": "200ec8c8",
    "metadata": {},
    "source": [
     "Buscando reduzir custos e melhorar a qualidade de vida de seus colaboradores, uma empresa de atendimento decidiu fazer um teste para avaliar se a adoção do home office para os operadores produziria algum efeito negativo na qualidade dos atendimentos.\n",
@@ -241,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1e2a462",
+   "id": "0d598049",
    "metadata": {},
    "source": [
     "Para responder a pergunta precisamos saber se a média das notas dos clientes para os operadores trabalhando no escritório é estatisticamente maior do que a média das notas dos clientes para os mesmos operadores trabalhando em home office.\n",
@@ -367,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8224b8a0",
+   "id": "c4905930",
    "metadata": {},
    "source": [
     "Já sabemos que p-valor indica o quão plausível é H0, e neste caso, o valor calculado de 12% indica que H0 é plausível."
@@ -375,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e978c4d7",
+   "id": "0306d844",
    "metadata": {},
    "source": [
     "Como o p-valor de 12% é maior que o nível de significância de 5%, podemos concluir que não existem evidências estatísticas suficientes contra H0 , ou seja, não rejeitamos H0.\n",
